--- a/BiliLoginMobile/BiliLogin/BiliLogin.csproj
+++ b/BiliLoginMobile/BiliLogin/BiliLogin.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{64AFB390-A9E3-4AA2-B817-9659A269D2BE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>BiliLoginMobile</RootNamespace>
-    <AssemblyName>BiliLoginMobile</AssemblyName>
+    <RootNamespace>BiliLogin</RootNamespace>
+    <AssemblyName>BiliLogin</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -87,7 +87,7 @@
     <Compile Include="WpfAnimatedGif\Decoding\GifTrailer.cs" />
     <Compile Include="WpfAnimatedGif\ImageAnimationController.cs" />
     <Compile Include="WpfAnimatedGif\ImageBehavior.cs" />
-    <Page Include="LoginWindow.xaml">
+    <Page Include="MoblieLoginWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -95,8 +95,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="LoginWindow.xaml.cs">
-      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    <Compile Include="MoblieLoginWindow.xaml.cs">
+      <DependentUpon>MoblieLoginWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MainWindow.xaml">
