Add titile & icon, Add ease

--- a/BiliLoginMobile/BiliLogin/BiliLogin.csproj
+++ b/BiliLoginMobile/BiliLogin/BiliLogin.csproj
@@ -149,5 +149,8 @@
   <ItemGroup>
     <Resource Include="img\qr-refresh.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
