Enhanced json parser

--- a/BiliLoginMobile/BiliLogin/BiliLogin.csproj
+++ b/BiliLoginMobile/BiliLogin/BiliLogin.csproj
@@ -56,9 +56,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BiliLoginQR.cs" />
+    <Compile Include="Json\IJson.cs" />
     <Compile Include="Json\JsonArray.cs" />
     <Compile Include="Json\JsonObject.cs" />
     <Compile Include="Json\JsonParser.cs" />
+    <Compile Include="Json\JsonValue.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
